# life-engine-learning

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  decisions.md  main.py  mcp_math_server.py  pyproject.toml  skill_loader.py  test_events.py  test_filesystem_mcp.py  test_mcp.py  test_mcp_wrapped.py  verify_tokens.py
docs/: AGENTS.md  ARCHITECTURE_SPEC.md  FOUR_QUESTIONS.md  LEARNING_FRAMEWORK.md  SPEC.md
docs/sessions/: 2026-02-09-token-instrumentation.md  2026-02-10-token-instrumentation-final.md
engines/: __init__.py  base.py  level1_monolith.py  level2_skills.py  level3_classifier.py  level4_adaptive.py  level5_mcp.py
shared/: __init__.py  models.py  skill_loader.py  tools.py
skills/activities/: SKILL.md
skills/activities/references/: category_guide.md
skills/currency/: SKILL.md
skills/database/: SKILL.md
skills/filesystem/: SKILL.md
skills/flights/: SKILL.md
skills/hotels/: SKILL.md
skills/math/: SKILL.md
skills/packing/: SKILL.md
skills/time/: SKILL.md
skills/visa/: SKILL.md
skills/visa/references/: response_guide.md
skills/weather/: SKILL.md
skills/weather/references/: api_reference.md
viz/: __init__.py  annotations.py  events.py  server.py
viz/static/: app.js  index.html  styles.css
viz/teaching/: EXTENDING.md  __init__.py  comparisons.py  concepts.py  events.py  insights.py  models.py
